konpu-macros/tests/ui/fail_monoid_missing_identity.rs
#[konpu::monoid(op = "concat")]
struct MissingIdentity;